css/scroll.css
html, body {
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
}

body {
  margin: 0;
  font-family: sans-serif;
  overflow-x: hidden;
  background-color: black;
}

/*--------------------------------------------------*/

ul {
  list-style-type: none;
}

a {
  color: white;
  text-decoration: none;
}

a:visited {
  color: white;
  text-decoration: none;
}

@font-face {
  font-family: "Superclarendon Light";
  src: url("../fonts/Superclarendon-Light.ttf");
}

@font-face {
  font-family: "Suisse Intl SemiBold";
  src: url("../fonts/SuisseIntl-SemiBold.otf");
}

@font-face {
  font-family: "Suisse Intl SemiBold Italic";
  src: url("../fonts/SuisseIntl-SemiBoldItalic.otf");
}

@font-face {
  font-family: "Suisse Intl Book";
  src: url("../fonts/SuisseIntl-Book.otf");
}

@font-face {
  font-family: "Suisse Intl Regular";
  src: url("../fonts/SuisseIntl-Regular.otf");
}

@font-face {
  font-family: "Suisse Intl Regular Italic";
  src: url("../fonts/SuisseIntl-RegularItalic.otf");
}

@font-face {
  font-family: "Suisse Intl Light";
  src: url("../fonts/SuisseIntl-Light.otf");
}

@font-face {
  font-family: "Suisse Intl Light Italic";
  src: url("../fonts/SuisseBPIntl-LightItalic.otf");
}

@font-face {
  font-family: "Suisse Intl Thin Italic";
  src: url("../fonts/SuisseIntl-ThinItalic.otf");
}

/*--------------------------------------------------*/

/* Container that scrolls while keeping canvas fixed */
.scroll-container {
  position: relative;
  height: 3000px; /* total scroll area */
}

.canvas-container {
  position: sticky;
  top: 0;
  height: 100vh;
  background: black;
  display: flex;
  justify-content: center;
  align-items: center;
  mask:radial-gradient(circle, white 30%, transparent 75%)
}

canvas {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.canvas-title {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: white;
  font-family: 'Suisse Intl Regular', Helvetica, sans-serif;
  font-size: 78px;
  pointer-events: none; /* Let scroll pass through */
  cursor: s-resize;
  z-index: 2;
  padding: 0 0px;
}

.spacer {
  height: 100vh;
}

/*--------------------------------------------------*/

/* The text section appears AFTER scroll area */
.text-section {
  padding: 50px 0px 0px 0px;
  min-height: calc(100vh - 50px);
  text-align: left;
  font-size: 1.5em;
  opacity: 0;
  transition: opacity 2s ease-out;
  background-color: black;
  color: white;
}

.text-section.visible {
  opacity: 1;
}

.italic {
  font-family: 'Suisse Intl Thin Italic', Helvetica, sans-serif;
}

.semibolditalic {
  font-family: 'Suisse Intl SemiBold Italic', Helvetica, sans-serif;
}

.light {
  font-family: 'Suisse Intl Light', Helvetica, sans-serif;
}

.linespace {
  line-height: 20px;
}

.description {
  display: relative;
  top: 0;
  margin-top: -50px;
  margin-left: 15%;
  margin-right: 15%;
  margin-bottom: 150px;
  font-size: 25px;
  letter-spacing: .5px;
  line-height: 40px;
/*  background-color: blueviolet;*/
}



/*--------------------------------------------------*/

#picture-container {
/*  display: flex;*/
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: 20px;
/*  background-color: cyan;*/
  width: 70%;
  margin-left: 15%;
  margin-right: 15%;
/*  margin-top: 0px;*/
  margin-bottom: 90px;
}

.picture-item4 {
  flex: 0 0 auto;
  width: calc(100%);
}

.picture-item3 {
  flex: 0 0 auto;
  width: calc(75% - 15px);
}

.picture-item2 {
  flex: 0 0 auto;
  width: calc(50% - 20px);
}

.picture-item1 {
  flex: 0 0 auto;
  width: calc(25% - 10px);
}

.picture-item1a {
  flex: 0 0 auto;
  width: calc(25% - 5px);
}

.picture-item1a img {
  width: 100%;
  height: auto;
  display: block;
}

.picture-item1 img {
  width: 100%;
  height: auto;
  display: block;
}

.picture-item2 img {
  width: 100%;
  height: auto;
  display: block;
}

.picture-item3 img {
  width: 100%;
  height: auto;
  display: block;
}

.picture-item4 img {
  width: 100%;
  height: auto;
  display: block;
}
/*--------------------------------------------------*/

.vimeo-wrapper {
  position: relative;
  padding-bottom: 39.25%; /* 16:9 */
  padding-top: 100px;
  height: 0;
  width: 70%;
  margin: 40px auto;
/*  overflow: hidden;*/
/*  margin-top: 20px;*/
/*background-color: cyan;*/
}

.vimeo-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/*--------------------------------------------------*/

.sidenav {
  height: 100%;
  width: 50em;
  position: fixed;
  top: 0;
  left: 0;
  background-color: white;
  border-right: solid 1px black;
  overflow-x: hidden;
  transform: translateX(-50em);
  transition: 0.5s;
  z-index: 11;
}

.sitename {
  position: fixed;
  width: 213px;
  white-space: nowrap;
  overflow: hidden;
  top: 20px;
  left: 30px;
  color: black;
  /*background-color: yellow;*/
  font-family: 'Superclarendon Light', serif;
/*  font-family: "Times New Roman", Times, serif;*/
  font-size: 35px;
  text-align: left;
  z-index: 12;
  border-bottom: 2.4px solid black;
  opacity: 0;
  transition: opacity .3s ease;
  pointer-events:none;
  z-index: 12;
}

.sidenav .bio {
  position: absolute;
  top: 250px;
  left: 32px;
  width: calc(100% - 100px);
  color: black;
  /*background-color: yellow;*/
  font-family: 'Suisse Intl Regular', Helvetica, sans-serif;
  font-size: 22px;
  letter-spacing: .5px;
  line-height: 35px;
}

.sidenav .semi {
  font-family: 'Suisse Intl SemiBold', Helvetica, sans-serif;
  font-size: 22px;
  letter-spacing: 1.5px;
  line-height: 35px;
}

.sidenav a {
  color: black;
  font-family: 'Suisse Intl Regular Italic', Helvetica, sans-serif;
  font-size: 22px;
  letter-spacing: 1px;
  line-height: 35px;
}

.sidenav .bio a:hover {
  border-bottom: 2px solid black;
  text-decoration: none;
  cursor: pointer;
}

.sidenav .closebtn:hover {
  cursor: pointer;
  border-bottom: 2.4px solid black;
}

.sidenav .closebtn {
  position: absolute;
  top: 7px;
  right: 32px;
  font-family: 'Suisse Intl Light', Helvetica, sans-serif;
  font-size: 50px;
  height: 56px;
  /*background-color: yellow;*/
  color: black;
  opacity: 0;
  transition: opacity 0.3s ease-in;
  z-index: 13;
}

.sidenav .contact{
  position: absolute;
  bottom: 50px;
  left: 32px;
  font-family: 'Suisse Intl Regular', Helvetica, sans-serif;
  font-size: 22px;
  letter-spacing: .5px;
  line-height: 35px;
}

.sidenav .contact a:hover {
  border-bottom: 2px solid black;
}

.sidenav .cv{
  position: absolute;
  bottom: 50px;
  right: calc(50% - 270px);
}

.sidenav .cv a:hover {
  border-bottom: 2px solid black;
}

/*--------------------------------------------------*/

.menu {
  position: fixed;
  width: 100%;
  margin-top: 20px;
  margin-left: 0;
  z-index: 10;
  color: white;
  background-color: transparent;
  font-family: 'Superclarendon Light', serif;
  /*font-family: Suisse Intl, Helvetica, sans-serif;*/
  font-size: 35px;
  /*letter-spacing: 1px;*/
  /*text-shadow: 1px 1px 1px black;*/
  /*-webkit-text-stroke-width: .7px;
  -webkit-text-stroke-color: black;*/
}

.menu a:hover {
  color: white;
  background-color: transparent;
  border-bottom: 2px solid white;
  text-decoration: none;
  cursor: pointer;
}

.about {
  float: left;
  margin-left: 30px;
}

.about:hover {
  cursor: pointer;
  border-bottom: 2px solid currentColor;
}

.size {
  float: right;
  margin-right: 30px;
}

#selected {
  border-bottom: 2px solid currentColor;
  text-decoration: none;
}

.asterisk-wrapper {
  display: inline-block;
  line-height: 0;
}

.asterisk {
  display: inline-block;
  font-size: 30px;
/*  background-color: magenta;*/
  line-height: 1;
  transform-origin: 50% 30%;
  animation: spin 2s linear infinite;
}

/* Animation: rotate with offset */
@keyframes spin {
  from {
    transform: translateY(-2px) rotate(0deg);
  }
  to {
    transform: translateY(-2px) rotate(360deg);
  }
}

/*--------------------------------------------------*/

.listcontainer {
  top: 70px;
  position: fixed;
  width: 300px;
  right: 32px;
  color: white;
  background-color: transparent;
  font-family: 'Superclarendon Light', serif;
  font-size: 0.8em;
  line-height: calc((100vh - 300px)/18);
  z-index: 10;
  float: right;
/*  background-color: blue;*/
  text-align: right;
}

.proj {
  position: relative;
  display: inline-block;
  margin-bottom: 8px;
  border-bottom: 2px solid white;
  /*background-color: red;*/
}

.proj:hover {
  cursor: pointer;
}

/*.scroll-container > div[id] {
  scroll-margin-top: 100vh;
}*/

/*--------------------------------------------------*/

@media only screen and (max-width: 1350px) {
/*  body {
    background-color: chartreuse;
  }*/

  .canvas-title {
    font-size: 48px;
  }  
}

@media only screen and (max-width: 1000px) {
  .picture-item1 {
    width: calc(50% - 10px);
  }

  .picture-item2 {
    width: calc(100%);
  }

 /* .picture-item3 {
    width: calc(100%);
  }*/
}

@media only screen and (max-width: 800px) {

  .sidenav {
    height: 100%;
    width: 100vw;;
    position: fixed;
    top: 0;
    left: 0;
    background-color: white;
    border-right: solid 1px black;
    overflow-x: hidden;
    transform: translateX(-100vw);
    transition: 0.5s;
    z-index: 11;
  }

  .sidenav .bio {
    position: absolute;
    top: 250px;
    left: 32px;
    width: calc(100% - 55px);
    color: black;
    font-family: 'Suisse Intl Regular', Helvetica, sans-serif;
    font-size: 19px;
    letter-spacing: .5px;
    line-height: 28px;
  }

  .sidenav .semi {
    font-family: 'Suisse Intl SemiBold', Helvetica, sans-serif;
    font-size: 19px;
    letter-spacing: 1.5px;
    line-height: 29px;
  }

  .sidenav a {
    color: black;
    font-family: 'Suisse Intl Regular Italic', Helvetica, sans-serif;
    font-size: 19px;
    letter-spacing: 1px;
    line-height: 29px;
  }

  .sidenav .cv{
    position: absolute;
    bottom: 50px;
    right: 35px;
  }

  .sidenav .contact{
    position: absolute;
    bottom: 50px;
    left: 32px;
    font-family: 'Suisse Intl Regular', Helvetica, sans-serif;
    font-size: 19px;
    letter-spacing: .5px;
    line-height: 29px;
  }

  .description {
    font-size: 19px;
    letter-spacing: .5px;
    line-height: 29px;
  }

  .canvas-title {
    font-size: 38px;
  }
}

@media only screen and (max-width: 645px) {
  .canvas-title {
    font-size: 29px;
  }

/*  body {
    background-color: cyan;
  } */

  .sitename {
    font-size: 21px;
/*    background-color: lightyellow;*/
    width: 128px;
    font-weight: bold;
  }

  .menu {
    font-size: 21px;
    font-weight: bold;
  }

  .asterisk {
    font-size: 21px;
  }

  @keyframes spin {
    from {
      transform: translateY(0px) rotate(0deg);
    }
    to {
      transform: translateY(0px) rotate(360deg);
    }
  }

}

